--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -3,12 +3,13 @@
   padding-right: 3%;
   border-style: solid;
   border-width: 5px;
-  margin: 15px;
+  margin-top: 2%;
   height: 250px;
 }
 
 .tweet-header {
   padding-top: 2%;
+  height: 30%;
 }
 
 .tweet-header img {
@@ -23,6 +24,7 @@
 }
 
 .handle {
+  display: none;
   color: #42aaf5;
   position: relative;
   left: 80%;
@@ -30,17 +32,13 @@
 }
 
 .tweet .tweet-content {
-  position: relative;
-  left: 20px;
-  bottom: 170px;
-  padding-top: 7%;
   overflow-wrap: break-word;
+  height: 40%;
 }
 
 .tweet .tweet-footer {
-  height: 20%;
   position: relative;
-  bottom: 56%;
+  bottom: 6%;
   font-size: 16px;
   border-top: 5px solid;
 }
@@ -53,19 +51,19 @@
 
 .tweet-footer .flag {
   position: absolute;
-  bottom: 5%;
+  bottom: 1%;
   left: 85%;
 }
 
 .tweet-footer .retweet {
   position: absolute;
-  bottom: 5%;
+  bottom: 1%;
   left: 88%;
 }
 
 .tweet-footer .heart {
   position: absolute;
-  bottom: 5%;
+  bottom: 1%;
   left: 91%;
 }
 
@@ -73,23 +71,16 @@
   box-shadow: 10px 10px 2px 1px #42aaf5;
 }
 
+.tweet:hover .handle {
+  display: block;
+}
+
 @media only screen and (min-width: 1024px) {
+  .tweet {
+    margin: 2%;
+  }
+
   .tweet-header {
     position: relative;
-    top: 10px;
-  }
-
-  .tweet .tweet-content {
-    bottom: 55%;
-  }
-
-  .tweet .tweet-footer {
-    bottom: 35%;
-  }
-
-  .handle {
-    position: absolute;
-    left: 75%;
-    bottom: 38%;
   }
 }
